# pagoma

./: .clang-format  .gersemirc  .gitignore  CMakeLists.txt  README.md  pagoma.cc  parameters.prm
.github/workflows/: format-check.yml
cmake/macros/: macro_package_hints.cmake
cmake/modules/: FindKokkos.cmake  FindMPI.cmake  FindP4EST.cmake  FindZLIB.cmake  Finddeal.II.cmake
contrib/utilities/: cmake_format.sh
examples/ocellifera/: ocellifera.geo
include/: allen_cahn_operator.h  constraint_manager.h  dof_manager.h  invm.h  mesh_manager.h  operator.h  output.h  parameters.h  solution_manager.h  time_iterator.h  timer.h  utilities.h
include/core/: stdpde.h
